port: resolve SecureJar shader URLs as resources